# DrawableGeometries

./: .gitignore  CMakeLists.txt  README.md
build-debug/: CMakeCache.txt.prev  DrawableGeometries-test  Makefile  Test-DrawableGeometries  cmake_install.cmake
build-debug/.cmake/api/v1/reply/: cache-v2-d9cbca804d0c3bb413f3.json  cmakeFiles-v1-d53c001240a762e66a42.json  codemodel-v2-00ce020c7eb90a77cffc.json  directory-.-Debug-34adef31ff6c409a3eaa.json  index-2023-06-07T10-09-54-0061.json  target-DrawableGeometries-lib-Debug-b522ca9f878c4da97a2e.json  target-DrawableGeometries-test-Debug-d70d1a2e5e803ed6b84d.json
build-debug/.cmake/api/v1/reply.prev/: codemodel-v2-af3197bc4cc67eae18e8.json  directory-.-Debug-ef0d49fbb9b5859891b6.json  index-2023-05-09T13-45-21-0734.json  target-DrawableGeometries-test-Debug-bb16a9f60a93baa8b401.json
build-debug/.qtc_clangd/: compile_commands.json
build-debug/.qtc_clangd/.cache/clangd/index/: ArithmeticSequence.h.4FEE27828B82E609.idx  BlockHouseholder.h.50748C6F2DAB88EB.idx  BlockMethods.h.A8348095E1733A95.idx  Configure.h.4C24003A187FE308.idx  ConfigureVectorization.h.186471E02E48B54A.idx  GeneralBlockPanelKernel.h.95070DEEEECCE49D.idx  GenericPacketMath.h.0B9B226B520E8724.idx  Macros.h.3C6BCD7DBF0AC12F.idx  PartialPivLU.h.6D55BC82941B6B2C.idx  Point.hpp.408BBAA62CABF049.idx  ReshapedHelper.h.ED6E3F8C7F475D3A.idx  ReshapedMethods.h.4B07D9E588DB442F.idx  Reverse.h.C8617628A06C5DF6.idx  Scaling.h.8F89CF4D732F7F27.idx  Status.hxx.62E26116BA58C8E2.idx  SymbolicIndex.h.D1344C73EA8A365B.idx  SystemTools.hxx.D3A7763B4956E8C3.idx  Translation.h.EA35E6B977887F10.idx  TriangleMesh.hpp.D0AADF841D4AB886.idx  allocators.h.F5922F593099A941.idx  annotation.hpp.8270DCF20620676A.idx  annotationfilemanager.hpp.E5E0D98DDDF23877.idx  array.964D276A88C4B6FD.idx  assert.h.F44EF353D67C7E11.idx  atomic.C3F277D98C9C5E57.idx  attribute.hpp.35D2D78B8BDD90C7.idx  basic_string.h.B5C6A696D1425819.idx  climits.27867778FD547A06.idx  cmath.E48CABDBEB7B9AF6.idx  complex.A9AA09AE400484DD.idx  deque.tcc.B4ACE78143B13F2E.idx  diyfp.h.4445608AC07EEDFD.idx  drawableannotation.cpp.140F708944729B9F.idx  drawableannotation.hpp.3C547B0E67C68A17.idx  drawableattribute.hpp.D18656A34911C241.idx  drawableboundingmeasure.cpp.35846AD62E6A9287.idx  drawableboundingmeasure.hpp.E50E7B8BAB5885AF.idx  drawablecylinder.cpp.D49BBABF82AA9C1B.idx  drawablecylinder.hpp.1D1525EF00C5A2FB.idx  drawableellipsoid.cpp.38090B25859D722F.idx  (+181 more)
build-debug/pkg/: drawablegeometries-config.cmake
build-minSizeRel/: CMakeCache.txt.prev  DrawableGeometries-test  Makefile  Test-DrawableGeometries  cmake_install.cmake  install_manifest.txt
build-minSizeRel/.cmake/api/v1/reply/: cache-v2-5186b971fd0f5a853fdf.json  codemodel-v2-1bfa11c01114c98fd644.json  index-2023-06-07T10-09-28-0158.json  target-DrawableGeometries-test-MinSizeRel-54aeca779ea285215dac.json
build-minSizeRel/.cmake/api/v1/reply.prev/: cmakeFiles-v1-0594435bd28f57bfe470.json  directory-.-MinSizeRel-b0eb95aa48f6b774eba5.json  target-DrawableGeometries-lib-MinSizeRel-56eedbc55185e2cc0eec.json
build-minSizeRel/.qtc_clangd/: compile_commands.json
include/: drawableobject.hpp
include/Geometric primitives/: drawablecylinder.hpp  drawableellipsoid.hpp  drawableparallelepiped.hpp  drawablesphere.hpp
include/TriangleMesh/: drawableannotation.hpp  drawableattribute.hpp  drawableboundingmeasure.hpp  drawableeuclideanmeasure.hpp  drawablegeodesicmeasure.hpp  drawablelineannotation.hpp  drawablepointannotation.hpp  drawablesurfaceannotation.hpp  drawabletrianglemesh.hpp
pkg/: drawablegeometries-config.cmake.in
src/: main.cpp
src/Geometric primitives/: drawablecylinder.cpp  drawableellipsoid.cpp  drawableparallelepiped.cpp  drawablesphere.cpp
src/TriangleMesh/: drawableannotation.cpp  drawableboundingmeasure.cpp  drawableeuclideanmeasure.cpp  drawablegeodesicmeasure.cpp  drawablelineannotation.cpp  drawablepointannotation.cpp  drawablesurfaceannotation.cpp  drawabletrianglemesh.cpp
(+337 files in other folders)
